# artistpath

./: .dockerignore  .env.example  .gitignore  LICENSE-CODE  README.md  TODO.md  docker-compose.yml  notes.md
.github/workflows/: deploy.yml
artistpath/: Cargo.toml  README_TESTS.md
artistpath/src/: args.rs  json_output.rs  lib.rs  main.rs  pathfinding.rs  string_normalization.rs
artistpath/src/pathfinding/: bfs.rs  dijkstra.rs  utils.rs
artistpath/tests/: lib.rs
artistpath/tests/colors/: mod.rs
artistpath/tests/json_output/: mod.rs
artistpath/tests/parsing/: edge_cases.rs  mod.rs  unified.rs
artistpath/tests/pathfinding/: bfs.rs  dijkstra.rs
artistpath/tests/string_normalization/: mod.rs
artistpath/tests/utils/: format.rs
cli/: Cargo.toml
cli/src/: app.rs  args.rs  colors.rs  display.rs  download.rs  json_output.rs  lib.rs  main.rs  parsing.rs  pathfinding.rs  search.rs  string_normalization.rs  utils.rs
cli/tests/: lib.rs
cli/tests/json_output/: mod.rs
cli/tests/parsing/: lookup.rs  metadata.rs  mod.rs
cli/tests/pathfinding/: bfs.rs  mod.rs
cli/tests/test_data/: graph.ndjson  graph_index.json  lookup.json  metadata.ndjson
cli/tests/utils/: format.rs
core/: Cargo.toml
core/examples/: benchmark_pathfinding.rs
core/src/: benchmark.rs  lib.rs  parsing.rs  pathfinding_config.rs  string_normalization.rs
core/src/exploration/: bfs.rs  dijkstra.rs  mod.rs
core/src/pathfinding/: bfs.rs  dijkstra.rs  mod.rs  profiled_bfs.rs  utils.rs
core/src/pathfinding/bfs/: mod.rs  neighborhood.rs  state.rs
core/tests/: algorithm_enum.rs  lib.rs
core/tests/exploration/: bfs.rs  dijkstra.rs  mod.rs
core/tests/parsing/: edge_cases.rs  unified.rs
core/tests/pathfinding/: bfs.rs  dijkstra.rs  mod.rs
core/tests/string_normalization/: mod.rs
data-collection/: api_client.py  collector.py  data_storage.py  graph_processor.py  main.py  pyproject.toml
data_collection/: README.md  add_seeds_to_queue.py  api_client.py  collector.py  data_storage.py  pyproject.toml  run_collection.py  run_convert_to_binary.py  run_create_lookup.py  run_create_lookups.py  run_embedding.py  run_incremental_collection.py  run_index_graph.py  run_metadata_collection.py  run_postprocessing.py
experiments/: EMBEDDING_EXPERIMENTS_SUMMARY.md  README.md  WORKFLOW.md  aggregate_results.py  calculate_graph_metrics.py  choose_best_subgraph.sh  compare_graph_metrics.py  create_incoming_graph.py  create_subgraph.py  evaluate_all_embeddings.py  evaluate_embedding.py  generate_all_embeddings.py  generate_embedding.py  graph_analysis_report.py  pyproject.toml
experiments/configs/: fullgraph_log_transform.json  fullgraph_squared.json  phase1_fastrp_optimization.json
experiments/embeddings/: README.md  aggregate_results.py  evaluate_all_embeddings.py  generate_all_embeddings.py  generate_embedding.py
experiments/embeddings/configs/: evaluation_config.json  fullgraph_test.json  incoming_only.json  transform_square_test.json
experiments/embeddings/results/embeddings_evaluation/: evaluation_embeddings_fastrp_128_q2_seed123.json  evaluation_embeddings_fastrp_128_q2_seed25.json  evaluation_embeddings_fastrp_128_q2_seed42.json  evaluation_embeddings_fastrp_128_q2_seed456.json  evaluation_embeddings_fastrp_128_q2_seed789.json  evaluation_embeddings_fastrp_128_q3_seed123.json  evaluation_embeddings_fastrp_128_q3_seed25.json  evaluation_embeddings_fastrp_128_q3_seed42.json  evaluation_embeddings_fastrp_128_q3_seed456.json  evaluation_embeddings_fastrp_128_q3_seed789.json  evaluation_embeddings_fastrp_128_q4_seed123.json  evaluation_embeddings_fastrp_128_q4_seed25.json  evaluation_embeddings_fastrp_128_q4_seed42.json  evaluation_embeddings_fastrp_128_q4_seed456.json  evaluation_embeddings_fastrp_128_q4_seed789.json  evaluation_embeddings_fastrp_16_q2_seed123.json  evaluation_embeddings_fastrp_16_q2_seed25.json  evaluation_embeddings_fastrp_16_q2_seed42.json  evaluation_embeddings_fastrp_16_q2_seed456.json  evaluation_embeddings_fastrp_16_q2_seed789.json  evaluation_embeddings_fastrp_16_q3_seed123.json  evaluation_embeddings_fastrp_16_q3_seed25.json  evaluation_embeddings_fastrp_16_q3_seed42.json  evaluation_embeddings_fastrp_16_q3_seed456.json  evaluation_embeddings_fastrp_16_q3_seed789.json  evaluation_embeddings_fastrp_256_q2_seed123.json  evaluation_embeddings_fastrp_256_q2_seed25.json  evaluation_embeddings_fastrp_256_q2_seed42.json  evaluation_embeddings_fastrp_256_q2_seed456.json  evaluation_embeddings_fastrp_256_q2_seed789.json  evaluation_embeddings_fastrp_256_q3_seed123.json  evaluation_embeddings_fastrp_256_q3_seed25.json  evaluation_embeddings_fastrp_256_q3_seed42.json  evaluation_embeddings_fastrp_256_q3_seed456.json  evaluation_embeddings_fastrp_256_q3_seed789.json  evaluation_embeddings_fastrp_256_q4_seed123.json  evaluation_embeddings_fastrp_256_q4_seed25.json  evaluation_embeddings_fastrp_256_q4_seed42.json  evaluation_embeddings_fastrp_256_q4_seed456.json  evaluation_embeddings_fastrp_256_q4_seed789.json  (+34 more)
experiments/graph_analysis/: calculate_graph_metrics.py  compare_graph_metrics.py  create_incoming_graph.py  create_subgraph.py  graph_analysis_report.py  plot_template.py
experiments/metrics/: graph_comparison.json  graph_distributions_sample.json  subgraph_distributions_sample.json  subgraph_metrics.json
experiments/results/: aggregated_results.json
experiments/results/metrics/: graph_metrics.json
web/api-tests/artistpath-web/: artist-details.bru  artist-search.bru  bruno.json  enhanced-path.bru  explore.bru  (+5 more)
web/backend/: Cargo.toml  Dockerfile
web/backend/src/: artist_details.rs  enhanced_pathfinding.rs  exploration.rs  handlers.rs  itunes.rs  lastfm.rs  lib.rs  main.rs  metadata_cache.rs  models.rs  pathfinding.rs  search.rs  state.rs
web/backend/src/cache/: fetcher.rs  mod.rs  storage.rs  types.rs
web/backend/tests/: lib.rs
web/backend/tests/fixtures/: mod.rs
web/backend/tests/handlers/: artist_details.rs  enhanced_path.rs  explore.rs  mod.rs  path.rs  search.rs  stats.rs
web/frontend/: index.html  package-lock.json  package.json  vite.config.js
(+11 files in other folders)
