[package]
name = "artistpath"
version = "0.1.0"
edition = "2024"

[lib]
name = "artistpath"
path = "src/lib.rs"

[[bin]]
name = "artistpath"
path = "src/main.rs"

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.5.45", features = ["derive"] }
colored = "3.0.0"
memmap2 = "0.9.7"
pyo3 = { version = "0.25.1", features = ["extension-module"] }
rustc-hash = "2.1.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
unidecode = "0.3.0"
uuid = { version = "1.18.0", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
