[package]
name = "artistpath"
version = "0.1.0"
edition = "2024"

[lib]
name = "normalization"
crate-type = ["cdylib"]
path = "src/string_normalization.rs"

[[bin]]
name = "artistpath"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
pyo3 = { version = "0.25.1", features = ["extension-module"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
unidecode = "0.3.0"
uuid = { version = "1.18.0", features = ["serde"] }
