[package]
name = "artistpath"
version = "0.2.2"
edition = "2024"
authors = ["malbiruk"]
description = "Find paths between music artists using Last.fm data"
homepage = "https://github.com/malbiruk/artistpath"
repository = "https://github.com/malbiruk/artistpath"
keywords = ["music", "lastfm", "pathfinding", "artists", "graph"]
categories = ["command-line-utilities"]
license = "MIT"

[[bin]]
name = "artistpath"
path = "src/main.rs"

[dependencies]
artistpath-core = "0.2.2"
clap = { version = "4.5.45", features = ["derive"] }
colored = "3.0.0"
memmap2 = "0.9"
rustc-hash = "2.1.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
uuid = { version = "1.18.0", features = ["serde", "v4"] }
reqwest = { version = "0.11", features = ["blocking"] }
indicatif = "0.17"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
