[project]
name = "data-collection"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "maturin>=1.9.3",
    "numpy>=2.3.3",
    "pacmap>=0.8.0",
    "psutil>=7.0.0",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "tenacity>=9.1.2",
]
