[package]
name = "artistpath-web"
version = "0.1.0"
edition = "2024"

[lib]
name = "artistpath_web"
path = "src/lib.rs"

[[bin]]
name = "artistpath-web"
path = "src/main.rs"

[dependencies]
artistpath-core = { path = "../../core" }

# Web server
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
bincode = "1.3"

# Utils
uuid = { version = "1.18.0", features = ["serde", "v4"] }
rustc-hash = "2.1.1"
memmap2 = "0.9.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client and caching
reqwest = { version = "0.11", features = ["json"] }
moka = { version = "0.12", features = ["future"] }
urlencoding = "2.1"
dotenvy = "0.15"
futures = "0.3"
rand = "0.9.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dev-dependencies]
tempfile = "3.8"
byteorder = "1.5"
